// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar no avatar URL 1`] = `
<DocumentFragment>
  <div
    class="userAvatar"
  >
    t
  </div>
</DocumentFragment>
`;

exports[`UserAvatar with avatar URL 1`] = `
<DocumentFragment>
  <img
    alt=""
    class="userAvatar"
    role="presentation"
    src="u"
  />
</DocumentFragment>
`;
